Add freetext to long behavioral data.

--- a/notebooks/archived/1 Prepare Data.ipynb
+++ b/notebooks/archived/1 Prepare Data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,15 +31,19 @@
     "bh = bh.join(ids_map, how='right')\n",
     "bh = bh.melt(\n",
     "    id_vars=['procedure_type_1', 'procedure_type_2', 'procedure_type_3', 'procedure_type_4', 'bids_id',\n",
-    "             'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4'],\n",
+    "             'description_type_1', 'description_type_2', 'description_type_3', 'description_type_4',\n",
+    "             'experiences_freetext_1', 'experiences_freetext_2', 'experiences_freetext_3', 'experiences_freetext_4'],\n",
     "    value_vars=['hypnosis_depth_1', 'hypnosis_depth_2', 'hypnosis_depth_3', 'hypnosis_depth_4'])\n",
     "bh['session'] = bh['variable'].apply(lambda x:x.split('_')[2])\n",
     "bh['procedure'] = bh.apply(lambda r: r['procedure_type_'+r['session']], axis=1)\n",
     "bh['description'] = bh.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
-    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
+    "bh['freetext'] = bh.apply(lambda r: r['experiences_freetext_'+r['session']], axis=1)\n",
+    "\n",
+    "bh = bh[['bids_id', 'value', 'procedure', 'description', 'freetext', 'session']].sort_values(by=['bids_id', 'session']).set_index('bids_id')\n",
     "bh = bh.rename(columns={'value':'hypnosis_depth'})\n",
     "bh.reset_index(inplace=True)\n",
-    "bh.to_csv('data/behavioral_data/behavioral_data.csv', index=0)"
+    "\n",
+    "# bh.to_csv('data/behavioral_data/behavioral_data_with_freetext.csv', index=0)"
    ]
   },
   {
