Create a sample dataset.

--- a/notebooks/archived/1 Prepare Data.ipynb
+++ b/notebooks/archived/1 Prepare Data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +97,42 @@
     "DATA.drop(columns=['bids_id', 'session', 'condition','Unnamed: 0.1',\n",
     "                   'Unnamed: 0'], inplace=True)\n",
     "# DATA.to_csv(f'data/classification_datasets/plv_source.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## data for PyEEG workshop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    " \n",
+    "# open data with free text and hypnotizability\n",
+    "hypnotizability = pd.read_excel('data/behavioral_data/archived/PLB_HYP_data_MASTER.xlsx', index_col=0).loc[9:][['bids_id', 'hypnotizability_total']]\n",
+    "hypnotizability['bids_id'] = hypnotizability['bids_id'].apply(lambda x:str(int(x)).zfill(2))\n",
+    "hypnotizability.set_index('bids_id', inplace=True)\n",
+    "\n",
+    "data = pd.read_csv('data/behavioral_data/behavioral_data_with_freetext.csv')\n",
+    "data = data.query('description == \"hypnosis\"')\n",
+    "data = data.query('procedure == \"confusion\" or procedure == \"relaxation\"')\n",
+    "data.set_index('bids_id', inplace=True)\n",
+    "\n",
+    "# append hypnotizability\n",
+    "data = data.join(hypnotizability, how='right')\n",
+    "\n",
+    "data['deep_hypnosis'] = data['hypnosis_depth'].apply(lambda x:True if x>=5 else False)\n",
+    "data['z_score'] = data['hypnotizability_total'].transform(lambda x: (x - x.mean())/x.std())\n",
+    "data.drop(columns=['description', 'session'], inplace=True)\n",
+    "\n",
+    "# data.dropna().iloc[10:]['z_score'].plot(kind='hist')\n",
+    "# data.to_csv('data/behavioral_data/PyEEG_behavioral_data.csv', index=0)"
    ]
   }
  ],
