Calculating the percentage of bad epochs that have been dropped.

--- a/src/archived/playground.ipynb
+++ b/src/archived/playground.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the percentage of dropped bad epochs\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import numpy as np\n",
+    "import mne\n",
+    "\n",
+    "full_length = 0\n",
+    "dropped = 0\n",
+    "\n",
+    "for epoch_path in sorted(Path('data/clean_data/').glob('*.fif')):\n",
+    "    epochs = mne.read_epochs(epoch_path, verbose=0)\n",
+    "    full_length += len(epochs.drop_log)\n",
+    "    dropped += len(epochs)\n",
+    "\n",
+    "round(1 - (dropped / full_length), 3) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
