Calculate participants' average age from age range.

--- a/src/archived/playground.ipynb
+++ b/src/archived/playground.ipynb
@@ -1148,6 +1148,39 @@
     "simulated_raw = mne.io.RawArray(data, info)\n",
     "mne.export.export_raw('test', simulated_raw, fmt='eeglab')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Participants' average age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.471153846153847"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "DATA = pd.read_excel('data/behavioral_data/archived/PLB_HYP_data_MASTER.xlsx', index_col=0)\n",
+    "data = DATA[['bids_id', 'age_range']].dropna()\n",
+    "data['mean'] = data['age_range'].apply(lambda x: (int(x.split('-')[0]) + int(x.split('-')[1])) / 2)\n",
+    "data['mean'].mean()"
+   ]
   }
  ],
  "metadata": {
