Correct typo in imports.

--- a/notebooks/1 Classification.ipynb
+++ b/notebooks/1 Classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,12 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import FunctionTransformer, StandardScaler\n",
     "from sklearn.svm import SVC, LinearSVC\n",
-    "# from src.sugnet.pipeline import FeatureExtractor"
+    "from src.suggnet.pipeline import FeatureExtractor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,8 @@
     "    ('zerovar', VarianceThreshold(threshold=0.0)),\n",
     "    ('scale', StandardScaler()),\n",
     "    ('select', 'passthrough'),\n",
-    "    ('clf', LinearSVC(max_iter=1000000, dual=True, class_weight='balanced')),\n",
+    "    # ('clf', LinearSVC(max_iter=1000000, dual=True, class_weight='balanced')),\n",
+    "    ('clf', SVC(max_iter=1000000, kernel='linear', class_weight='balanced')),\n",
     "])\n",
     "\n",
     "# scores = cross_val_score(pipe, X, y, groups=groups, cv=CV, scoring='accuracy')\n",
@@ -136,7 +137,7 @@
     "    'extract__kind': ['correlation source', 'power source', 'power sensor',\n",
     "                      'plv source', 'correlation sensor', 'plv sensor'],\n",
     "    'extract__frequency_band': ['delta', 'theta', 'alpha', 'beta', 'gamma'],\n",
-    "    'select': [SelectFromModel(SVC(kernel=\"linear\")), 'passthrough'],\n",
+    "    'select': [SelectFromModel(LinearSVC(max_iter=1000000, dual=True, class_weight='balanced')), 'passthrough'],\n",
     "    'clf__C': [0.1, 0.5, 1, 5, 10, 50, 100],\n",
     "}]\n",
     "\n",
