Check if the order of conditions followed a random or counterbalanced pattern?

--- a/src/archived/playground.ipynb
+++ b/src/archived/playground.ipynb
@@ -1181,6 +1181,111 @@
     "data['mean'] = data['age_range'].apply(lambda x: (int(x.split('-')[0]) + int(x.split('-')[1])) / 2)\n",
     "data['mean'].mean()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Is the order of the conditions counterbalanced?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('data/plb_hyp_data_MASTER.xlsx')\n",
+    "\n",
+    "# sort rows based on the datetime and\n",
+    "# create IDs for participants based on their participation order.\n",
+    "df = df.sort_values('datetime').reset_index().rename({'index':'participation_order'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select the \"description_type_\" and \"trial_type_\" columns + participation order\n",
+    "col = [c for c in df.columns if 'type' in c and 'proc' not in c]\n",
+    "col.append('participation_order')\n",
+    "df = df[col]\n",
+    "\n",
+    "# reshape dataframe to long format to combine description and trial types (the conditions column)\n",
+    "df = df.replace({True:'real'})\n",
+    "df = df.melt(id_vars=['participation_order', 'description_type_1', 'description_type_2',\n",
+    "                      'description_type_3', 'description_type_4'],\n",
+    "             value_vars=['trial_type_1', 'trial_type_2', 'trial_type_3', 'trial_type_4'  ])\n",
+    "\n",
+    "df['session'] = df['variable'].apply(lambda x:x.split('_')[2])\n",
+    "df['description'] = df.apply(lambda r: r['description_type_'+r['session']], axis=1)\n",
+    "df = df[['participation_order', 'description', 'value', 'session']].rename({'value':'trial_type'})\n",
+    "\n",
+    "# the conditions column represents the four types of conditions in the study\n",
+    "df['conditions'] = df.apply(lambda r:r[1] + '_' + r[2], axis=1)\n",
+    "\n",
+    "# reshape dataframe to wide format\n",
+    "df = df.pivot(index='participation_order', columns='session', values='conditions')\n",
+    "\n",
+    "# create a dictionary of all possible ordered combinations\n",
+    "from itertools import permutations\n",
+    "perms = permutations(['hypnosis_sham', 'control_real',\n",
+    "                      'hypnosis_real', 'control_sham'])\n",
+    "\n",
+    "perm_dict = {p:f'Group {i+1}' for i, p in enumerate(perms)}\n",
+    "\n",
+    "# create a new column indicating the order type of the participant\n",
+    "group_names = [perm_dict[tuple(df.iloc[i].values)] for i in range(len(df))]\n",
+    "df['groups'] = group_names\n",
+    "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Group 24    5\n",
+       "Group 20    4\n",
+       "Group 12    4\n",
+       "Group 18    4\n",
+       "Group 19    4\n",
+       "Group 7     4\n",
+       "Group 17    4\n",
+       "Group 14    4\n",
+       "Group 8     3\n",
+       "Group 10    3\n",
+       "Group 22    3\n",
+       "Group 3     3\n",
+       "Group 1     2\n",
+       "Group 9     2\n",
+       "Group 21    2\n",
+       "Group 23    2\n",
+       "Group 11    2\n",
+       "Group 16    2\n",
+       "Group 4     1\n",
+       "Group 5     1\n",
+       "Group 6     1\n",
+       "Group 15    1\n",
+       "Name: groups, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the number of participants in each group\n",
+    "df['groups'].value_counts()"
+   ]
   }
  ],
  "metadata": {
