--- a/src/archived/playground.ipynb
+++ b/src/archived/playground.ipynb
@@ -1187,7 +1187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Is the order of the conditions counterbalanced?"
+    "### Did the order of conditions follow a random or counterbalanced pattern?"
    ]
   },
   {
