--- a/notebooks/archived/wPLI.ipynb
+++ b/notebooks/archived/wPLI.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +181,136 @@
     "\n",
     "# save\n",
     "# df.to_csv('wpli_alpha2.csv', index=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wPLI with mne_connectivity.spectral_connectivity_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# imports\n",
+    "import re\n",
+    "import matplotlib.pyplot as plt\n",
+    "from mne_connectivity import spectral_connectivity_time\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# constants\n",
+    "freqs = np.arange(1, 42, 1)\n",
+    "foi = np.array([\n",
+    "        [1, 4],\n",
+    "        [4, 8],\n",
+    "        [8, 13],\n",
+    "        [13, 30],\n",
+    "        [30, 42]\n",
+    "        ])\n",
+    "fmin = tuple(foi[:, 0])\n",
+    "fmax = tuple(foi[:, 1])\n",
+    "\n",
+    "## open a sample eeg data and create connectivity labels based on its channel names\n",
+    "epochs = mne.read_epochs('data/clean_data/sub-01_ses-01_task-experience1_proc-clean_epo.fif',\n",
+    "                         verbose=0)\n",
+    "epochs.drop_channels(['M1', 'M2'])\n",
+    "epochs.pick_types(eeg=True)\n",
+    "ch_names = epochs.ch_names\n",
+    "\n",
+    "conn_labels = pd.DataFrame(columns=ch_names, index=ch_names)\n",
+    "conn_labels = conn_labels.apply(lambda x: x.index + '\\N{left right arrow}' + x.name)\n",
+    "conn_labels = conn_labels.values[np.triu_indices(conn_labels.shape[0], k=1)]\n",
+    "\n",
+    "## bands\n",
+    "bands = ['delta', 'theta', 'alpha', 'beta', 'gamma']\n",
+    "\n",
+    "# define a function that get a numpy array and return a dataframe of FCs\n",
+    "def calculate_wpli(data, freqs, fmin, fmax, bands, subject, task):\n",
+    "  conn = spectral_connectivity_time(data,\n",
+    "                                    freqs=freqs,\n",
+    "                                    method='wpli',\n",
+    "                                    fmin=fmin,\n",
+    "                                    fmax=fmax,\n",
+    "                                    sfreq=1000,\n",
+    "                                    faverage=True,\n",
+    "                                    average=True,\n",
+    "                                    verbose=0,\n",
+    "                                    decim=20,\n",
+    "                                    n_cycles=5\n",
+    "                                  )\n",
+    "\n",
+    "  # get data\n",
+    "  conn = conn.get_data(output='dense')\n",
+    "  \n",
+    "  # create a dataframe from a dictionary of connectivities in different bands\n",
+    "  temp = {}\n",
+    "  for i, b in enumerate(bands):\n",
+    "      temp[b] = conn[:, :, i][np.tril_indices(57, k=-1)]\n",
+    "\n",
+    "  df = pd.DataFrame(temp, index=conn_labels).stack().reset_index()\n",
+    "  df['conn'] = df['level_0'] + '_' + df['level_1']\n",
+    "  \n",
+    "  return df.drop(columns=['level_0', 'level_1']).set_index('conn').T.set_index([pd.Index([subject + '_' + task])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total = pd.DataFrame([]) # connectivity collectors\n",
+    "\n",
+    "for subject_path in sorted(Path('data/clean_data').glob('*.fif')):\n",
+    "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', subject_path.stem).groups()\n",
+    "    \n",
+    "    if 'experience' in task:\n",
+    "        # open data and modify\n",
+    "        print(f'>>>>>>>>>>>>>> Processing {subject} -- {task}')\n",
+    "        epochs = mne.read_epochs(subject_path, verbose=0)\n",
+    "        epochs.drop_channels(['M1', 'M2'])\n",
+    "        epochs.pick_types(eeg=True)\n",
+    "        data = np.array(np.array_split(np.hstack(epochs.get_data()), 10, axis=1))\n",
+    "        \n",
+    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject, task)\n",
+    "        \n",
+    "        df_total = pd.concat([df_total, df])\n",
+    "        del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# behavioral data\n",
+    "bh = pd.read_csv('data/behavioral_data/behavioral_data.csv')[:208]\n",
+    "bh['bids_id'] = bh['bids_id'].astype('int64')\n",
+    "bh['session'] = bh['session'].astype('int64')\n",
+    "\n",
+    "# append connectivity and behavioral data \n",
+    "df_total[['bids_id', 'condition']] = df_total.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
+    "df_total['session'] = df_total['condition'].apply(lambda x:int(x[-1]))\n",
+    "df_total['bids_id'] = df_total['bids_id'].apply(lambda x:int(x[4:]))\n",
+    "\n",
+    "df_total.reset_index(drop=True, inplace=True)\n",
+    "df_total = pd.merge(bh, df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
+    "df_total = df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
+    "df_total.insert(1, 'condition', df_total.pop('condition'))\n",
+    "# df_total.to_csv('data/wpli_sensor.csv')"
    ]
   }
  ],
