Calculate wpli at source level.

--- a/notebooks/archived/wPLI.ipynb
+++ b/notebooks/archived/wPLI.ipynb
@@ -21,13 +21,16 @@
     "import pandas as pd\n",
     "from scipy.io import loadmat\n",
     "\n",
-    "import mne"
+    "import mne\n",
+    "from mne_connectivity import spectral_connectivity_time\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# MATLAB\n",
     "## Prepare raw data for MATLAB"
    ]
   },
@@ -188,25 +191,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## wPLI with mne_connectivity.spectral_connectivity_time"
+    "# Python\n",
+    "## wPLI at sensor level"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# imports\n",
-    "import re\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mne_connectivity import spectral_connectivity_time\n",
-    "from pathlib import Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,23 +222,24 @@
     "\n",
     "conn_labels = pd.DataFrame(columns=ch_names, index=ch_names)\n",
     "conn_labels = conn_labels.apply(lambda x: x.index + '\\N{left right arrow}' + x.name)\n",
-    "conn_labels = conn_labels.values[np.triu_indices(conn_labels.shape[0], k=1)]\n",
+    "conn_labels = conn_labels.values[np.tril_indices(conn_labels.shape[0], k=-1)]\n",
     "\n",
     "## bands\n",
     "bands = ['delta', 'theta', 'alpha', 'beta', 'gamma']\n",
     "\n",
     "# define a function that get a numpy array and return a dataframe of FCs\n",
-    "def calculate_wpli(data, freqs, fmin, fmax, bands, subject, task):\n",
+    "def calculate_wpli(data, freqs, fmin, fmax, bands, subject, task, conn_labels, sfreq,\n",
+    "                   verbose=0, decim=20):\n",
     "  conn = spectral_connectivity_time(data,\n",
     "                                    freqs=freqs,\n",
     "                                    method='wpli',\n",
     "                                    fmin=fmin,\n",
     "                                    fmax=fmax,\n",
-    "                                    sfreq=1000,\n",
+    "                                    sfreq=sfreq,\n",
     "                                    faverage=True,\n",
     "                                    average=True,\n",
-    "                                    verbose=0,\n",
-    "                                    decim=20,\n",
+    "                                    verbose=verbose,\n",
+    "                                    decim=decim,\n",
     "                                    n_cycles=5\n",
     "                                  )\n",
     "\n",
@@ -257,7 +249,7 @@
     "  # create a dataframe from a dictionary of connectivities in different bands\n",
     "  temp = {}\n",
     "  for i, b in enumerate(bands):\n",
-    "      temp[b] = conn[:, :, i][np.tril_indices(57, k=-1)]\n",
+    "      temp[b] = conn[:, :, i][np.tril_indices(conn.shape[0], k=-1)]\n",
     "\n",
     "  df = pd.DataFrame(temp, index=conn_labels).stack().reset_index()\n",
     "  df['conn'] = df['level_0'] + '_' + df['level_1']\n",
@@ -282,9 +274,9 @@
     "        epochs = mne.read_epochs(subject_path, verbose=0)\n",
     "        epochs.drop_channels(['M1', 'M2'])\n",
     "        epochs.pick_types(eeg=True)\n",
-    "        data = np.array(np.array_split(np.hstack(epochs.get_data()), 10, axis=1))\n",
+    "        data = np.array(np.split(np.hstack(epochs.get_data()), 10, axis=1))\n",
     "        \n",
-    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject, task)\n",
+    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject, task, sfreq=1000)\n",
     "        \n",
     "        df_total = pd.concat([df_total, df])\n",
     "        del df"
@@ -311,6 +303,99 @@
     "df_total = df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
     "df_total.insert(1, 'condition', df_total.pop('condition'))\n",
     "# df_total.to_csv('data/wpli_sensor.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## wPLI at source level"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create connectivity labels\n",
+    "# labels\n",
+    "yeo7 = {\n",
+    "    'N1': 'Visual',\n",
+    "    'N2': 'Somatomotor',\n",
+    "    'N3': 'DorsalAttention',\n",
+    "    'N4': 'VentralAttention',\n",
+    "    'N5': 'Limbic',\n",
+    "    'N6': 'Frontoparietal',\n",
+    "    'N7': 'Default',\n",
+    "    'mwall': 'Medial_Wall',\n",
+    "}\n",
+    "\n",
+    "hemisferes = ['lh', 'rh']\n",
+    "\n",
+    "# labels based on Yeo2011 atlas orders\n",
+    "networks = [yeo7[k]+'_'+ hemisferes[i] for k in yeo7.keys() for i in range(len(hemisferes))]\n",
+    "\n",
+    "conn_labels = pd.DataFrame(index=networks, columns=networks)\n",
+    "conn_labels = conn_labels.apply(lambda x: x.index + '\\N{left right arrow}' + x.name)\n",
+    "conn_labels = conn_labels.values[np.tril_indices(conn_labels.shape[0], k=-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_total = pd.DataFrame([]) # connectivity collectors\n",
+    "for subject_path in sorted(Path('data/parcellated_source_yeo7').glob('*.npz')):\n",
+    "    subject, task = re.search('(.*)_task-(.*)_labels.*', subject_path.stem).groups()\n",
+    "    \n",
+    "    if 'experience' in task:\n",
+    "        \n",
+    "        label_ts = np.load(subject_path)['labels']\n",
+    "        data = np.hstack(label_ts)\n",
+    "        \n",
+    "        # To get 30-second time segments, we need to split source arrays into 10 segments.\n",
+    "        # To make the array divisible by 10, we cut off a few data points (less than 10) at the end:\n",
+    "        idx = data.shape[1] - data.shape[1]%10\n",
+    "        data = data[:, :idx]\n",
+    "        data = np.array(np.split(data, 10, axis=1))\n",
+    "        \n",
+    "        print(f'>>>>>>>>>>>>> Processing {subject} --- {task}')\n",
+    "        # calculate wpli\n",
+    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject=subject, task=task, conn_labels=conn_labels,\n",
+    "                            verbose=0, decim=10, sfreq=512)\n",
+    "        \n",
+    "        # append wpli\n",
+    "        df_total = pd.concat([df_total, df])\n",
+    "        del df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare data for classification\n",
+    "# behavioral data\n",
+    "bh = pd.read_csv('data/behavioral_data/behavioral_data.csv')[:208]\n",
+    "bh['bids_id'] = bh['bids_id'].astype('int64')\n",
+    "bh['session'] = bh['session'].astype('int64')\n",
+    "\n",
+    "# append connectivity and behavioral data \n",
+    "df_total[['bids_id', 'condition']] = df_total.index.to_series().apply(lambda x:x.split('_')).apply(pd.Series)\n",
+    "df_total['session'] = df_total['condition'].apply(lambda x:int(x[-1]))\n",
+    "df_total['bids_id'] = df_total['bids_id'].apply(lambda x:int(x[4:]))\n",
+    "\n",
+    "df_total.reset_index(drop=True, inplace=True)\n",
+    "df_total = pd.merge(bh, df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
+    "df_total = df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
+    "df_total.insert(1, 'condition', df_total.pop('condition'))\n",
+    "df_total.head()\n",
+    "# df_total.to_csv('data/classification_datasets/wpli_source.csv')"
    ]
   }
  ],
