Apply Laplacian filter before connecivity calculation.

--- a/notebooks/archived/wPLI.ipynb
+++ b/notebooks/archived/wPLI.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,9 +274,17 @@
     "        epochs = mne.read_epochs(subject_path, verbose=0)\n",
     "        epochs.drop_channels(['M1', 'M2'])\n",
     "        epochs.pick_types(eeg=True)\n",
-    "        data = np.array(np.split(np.hstack(epochs.get_data()), 10, axis=1))\n",
     "        \n",
-    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject, task, sfreq=1000)\n",
+    "        # set montage\n",
+    "        montage = mne.channels.make_standard_montage('standard_1020')\n",
+    "        epochs.set_montage(montage)\n",
+    "        print(epochs.info)\n",
+    "        \n",
+    "        # surface laplacian\n",
+    "        epochs_csd = mne.preprocessing.compute_current_source_density(epochs)\n",
+    "        data = np.array(np.split(np.hstack(epochs_csd.get_data()), 10, axis=1))\n",
+    "        \n",
+    "        df = calculate_wpli(data, freqs, fmin, fmax, bands, subject, task, conn_labels, sfreq=1000)\n",
     "        \n",
     "        df_total = pd.concat([df_total, df])\n",
     "        del df"
@@ -284,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +310,7 @@
     "df_total = pd.merge(bh, df_total, how='right', on=['session', 'bids_id'], right_index=False)\n",
     "df_total = df_total.sort_values(by=['bids_id', 'session', 'condition']).reset_index(drop=True)\n",
     "df_total.insert(1, 'condition', df_total.pop('condition'))\n",
-    "# df_total.to_csv('data/wpli_sensor.csv')"
+    "# df_total.to_csv('data/classification_datasets/wpli_sensor.csv')"
    ]
   },
   {
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,6 +404,108 @@
     "df_total.insert(1, 'condition', df_total.pop('condition'))\n",
     "df_total.head()\n",
     "# df_total.to_csv('data/classification_datasets/wpli_source.csv')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## experimenting ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>>>>>>>>>>>>> Processing sub-01 -- experience1\n",
+      "<Info | 15 non-empty values\n",
+      " bads: []\n",
+      " ch_names: Fp1, Fp2, F3, F4, C3, C4, P3, P4, O1, O2, F7, F8, T7, T8, P7, ...\n",
+      " chs: 57 EEG\n",
+      " custom_ref_applied: True\n",
+      " description: Anonymized using a time shift to preserve age at acquisition\n",
+      " dig: 60 items (3 Cardinal, 57 EEG)\n",
+      " experimenter: mne_anonymize\n",
+      " file_id: 4 items (dict)\n",
+      " highpass: 1.0 Hz\n",
+      " line_freq: 50.0\n",
+      " lowpass: 42.0 Hz\n",
+      " meas_date: 2021-03-11 12:14:23 UTC\n",
+      " meas_id: 4 items (dict)\n",
+      " nchan: 57\n",
+      " projs: []\n",
+      " sfreq: 1000.0 Hz\n",
+      " subject_info: 3 items (dict)\n",
+      ">\n",
+      "Fitted sphere radius:         94.7 mm\n",
+      "Origin head coordinates:      -0.8 14.3 45.7 mm\n",
+      "Origin device coordinates:    -0.8 14.3 45.7 mm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "for subject_path in sorted(Path('data/clean_data').glob('*.fif'))[:3]:\n",
+    "    if 'experience' in task:\n",
+    "        # open data and modify\n",
+    "        print(f'>>>>>>>>>>>>>> Processing {subject} -- {task}')\n",
+    "        epochs = mne.read_epochs(subject_path, verbose=0)\n",
+    "        epochs.drop_channels(['M1', 'M2'])\n",
+    "        epochs.pick_types(eeg=True)\n",
+    "        \n",
+    "        # set montage\n",
+    "        montage = mne.channels.make_standard_montage('standard_1020')\n",
+    "        epochs.set_montage(montage)\n",
+    "        print(epochs.info)\n",
+    "            \n",
+    "        # surface laplacian\n",
+    "        epochs_csd = mne.preprocessing.compute_current_source_density(epochs)\n",
+    "\n",
+    "        data = np.array(np.split(np.hstack(epochs_csd.get_data()), 10, axis=1))\n",
+    "        # data = np.array([np.hstack(epoch_csd.get_data())])\n",
+    "        \n",
+    "    subject, task = re.search('(.*)_ses-01_task-(.*)_proc-clean_epo.*', subject_path.stem).groups()\n",
+    "    conn = spectral_connectivity_time(data,\n",
+    "                                        freqs=freqs,\n",
+    "                                        method='wpli',\n",
+    "                                        fmin=fmin,\n",
+    "                                        fmax=fmax,\n",
+    "                                        sfreq=1000,\n",
+    "                                        faverage=True,\n",
+    "                                        average=True,\n",
+    "                                        verbose=0,\n",
+    "                                        decim=20,\n",
+    "                                        n_cycles=5\n",
+    "                                    )\n",
+    "\n",
+    "    # get data\n",
+    "    conn2 = conn.get_data(output='dense')\n",
+    "\n",
+    "    # create a dataframe from a dictionary of connectivities in different bands\n",
+    "    temp = {}\n",
+    "    for i, b in enumerate(bands):\n",
+    "        temp[b] = conn2[:, :, i][np.tril_indices(conn2.shape[0], k=-1)]\n",
+    "\n",
+    "    df = pd.DataFrame(temp, index=conn_labels).stack().reset_index()\n",
+    "    df['conn'] = df['level_0'] + '_' + df['level_1']\n",
+    "\n",
+    "    df = df.drop(columns=['level_0', 'level_1']).set_index('conn').T.set_index([pd.Index([subject + '_' + task])])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Can a smaller time segment increase classification performance with source-leveled beta power correlation"
    ]
   }
  ],
