--- a/notebooks/6 Behavioral Data.ipynb
+++ b/notebooks/6 Behavioral Data.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Behavioral Data Analysis"
+    "# Behavioral Data"
    ]
   },
   {
@@ -532,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
